--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "author": "Joseph Sanfelippo on behalf of Team Oregano",
-  "license":'',
   "repository": "https://github.com/Team-Oregano/Ratings-Reviews.git",
   "main": "client/mongo.js/index.js",
   "engines": {
@@ -11,9 +10,9 @@
   },
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "node server/index.js",
+    "start": "nodemon server/mongoIndex.js",
     "client-dev": "webpack --config ./webpack.config.js --mode development -w",
-    "server-dev": "nodemon server/index.js",
+    "server-dev": "nodemon server/mongoIndex.js",
     "test": "jest"
   },
   "dependencies": {
@@ -22,6 +21,7 @@
     "express": "^4.17.3",
     "firebase": "^9.6.10",
     "moment": "^2.29.1",
+    "pg": "^8.7.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -44,13 +44,13 @@
     "eslint-config-airbnb-babel": "^0.2.1",
     "jest": "^27.5.1",
     "jest-styled-components": "^7.0.8",
+    "mongodb": "*",
+    "mongoose": "*",
     "nodemon": "^2.0.15",
     "react-test-renderer": "^17.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "mongodb": "*",
-    "mongoose": "*"
+    "webpack-dev-server": "^4.8.1"
   }
 }
